Bug #1562: Checkbox and radios will be center aligned, left justified. Also solves issue #1571. Only tested in OSX Chrome!

--- a/core.css
+++ b/core.css
@@ -63,6 +63,7 @@ div#popupResponse {
     min-height: 50px;
     max-height: 320px;
     overflow: auto;
+    position: relative;
 }
 
 button.popupButton {
